--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^8.0.0",
     "koa": "^2.7.0",
     "koa-router": "^7.4.0",
-    "open": "^6.3.0"
+    "open": "^6.3.0",
+    "sharp": "^0.23.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
