--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "skeleton"
   ],
   "dependencies": {
+    "debug": "^4.1.1",
     "dotenv": "^8.0.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
