--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "tannineo <tannineo@outlook.com>",
   "license": "MIT",
   "scripts": {
-    "dev": "babel-node --inspect app/app.js",
+    "dev": "DEBUG=app:* npx nodemon app/app.js",
     "test": "jest --detectOpenHandles",
     "coverage": "jest --detectOpenHandles --coverage && node scripts/openCoverageInBrowser.js"
   },
@@ -40,6 +40,7 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
-    "jest": "^24.8.0"
+    "jest": "^24.8.0",
+    "nodemon": "^1.19.4"
   }
 }
