--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "skeleton"
   ],
   "dependencies": {
+    "bluebird": "^3.7.1",
     "debug": "^4.1.1",
     "dotenv": "^8.0.0",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "lodash": "^4.17.15",
     "open": "^6.3.0",
     "sharp": "^0.23.2"
   },
