--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
+    "koa2-cors": "^2.0.6",
     "lodash": "^4.17.15",
     "open": "^6.3.0",
     "sharp": "^0.23.2"
